fix font color issue for resume button on mobile

--- a/src/Sections/Profile/index.css
+++ b/src/Sections/Profile/index.css
@@ -129,6 +129,7 @@
     text-align: center;
     border-radius: 6px;
     width: fit-content;
+    color: black;
 }
 
 .profile .fontAwesomeLogos .resumeButton i {
